2009-07-28 Quiver speed improved, thanks to tip by Ray Speth. -EF

2009-07-27 Simplify argument handling code for plot method. -EF

2009-07-25 Allow "plot(1, 2, 'r*')" to work. - EF

2009-07-22 Added an 'interp' keyword to griddata so the faster linear
           interpolation method can be chosen.  Default is 'nn', so
           default behavior (using natural neighbor method) is unchanged (JSW)

2009-07-22 Improved boilerplate.py so that it generates the correct
           signatures for pyplot functions. - JKS

2009-07-19 Fixed the docstring of Axes.step to reflect the correct
           meaning of the kwargs "pre" and "post" - See SF bug
           https://sourceforge.net/tracker/index.php?func=detail&aid=2823304&group_id=80706&atid=560720
           - JDH

2009-07-18 Fix support for hatches without color fills to pdf and svg
           backends. Add an example of that to hatch_demo.py. - JKS

2009-07-17 Removed fossils from swig version of agg backend. - EF

2009-07-14 initial submission of the annotation guide. -JJL

2009-07-14 axes_grid : minor improvements in anchored_artists and
           inset_locator. -JJL

2009-07-14 Fix a few bugs in ConnectionStyle algorithms. Add
           ConnectionPatch class. -JJL

2009-07-11 Added a fillstyle Line2D property for half filled markers
           -- see examples/pylab_examples/fillstyle_demo.py JDH

2009-07-08 Attempt to improve performance of qt4 backend, do not call
           qApp.processEvents while processing an event. Thanks Ole
           Streicher for tracking this down - DSD

2009-06-24 Add withheader option to mlab.rec2csv and changed
  use_mrecords default to False in mlab.csv2rec since this is
  partially broken - JDH

2009-06-24 backend_agg.draw_marker quantizes the main path (as in the
           draw_path). - JJL

2009-06-24 axes_grid: floating axis support added. - JJL

2009-06-14 Add new command line options to backend_driver.py to support
           running only some directories of tests - JKS
